<resources>
	<string name="app_name">相亲佳缘</string>
	<string name="tab_text_1">缘分</string>
	<string name="tab_text_2">搜索</string>
	<string name="tab_text_3">信箱</string>
	<string name="tab_text_4">附近</string>
	<string name="tab_text_5">我</string>
	<string name="login">登录</string>
	<string name="register_tip">返回注册</string>
	<string name="login_tip">点击直接登录</string>
	<string name="register">注册</string>
	<string name="account_hint">请输入手机号码</string>
	<string name="password_hint">请输入6位密码</string>
	<string name="code_hint">请输入验证码</string>
	<string name="code_button">获取验证码</string>
	<string name="folder_all">所有照片</string>
	<string name="preview">预览</string>
	<string name="msg_no_camera">没有系统相机</string>
	<string name="msg_amount_limit">已经达到最高选择数量</string>
</resources>