<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/register_bg"
	android:orientation="vertical" >
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical" >
		<TextView
			android:id="@+id/back_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:drawableLeft="@drawable/login_arrow"
			android:drawablePadding="4dp"
			android:gravity="left|center_vertical"
			android:padding="10dp"
			android:text="@string/register_tip"
			android:textColor="#c86c57"
			android:textSize="17sp" />
		<EditText
			android:id="@+id/account_edit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"
			android:layout_marginTop="30dp"
			android:background="@android:color/transparent"
			android:drawableLeft="@drawable/login_account_icon"
			android:drawablePadding="12dp"
			android:hint="@string/account_hint"
			android:inputType="phone"
			android:textColor="@android:color/white"
			android:textSize="17sp" />
		<View
			android:layout_width="fill_parent"
			android:layout_height="1px"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:background="@android:color/white" />
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"
			android:layout_marginTop="30dp"
			android:orientation="horizontal" >
			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_weight="1"
				android:orientation="vertical" >
				<EditText
					android:id="@+id/code_edit"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="5dp"
					android:background="@android:color/transparent"
					android:drawableLeft="@drawable/login_password_icon"
					android:drawablePadding="12dp"
					android:hint="@string/code_hint"
					android:textColor="@android:color/white"
					android:textSize="17sp" />
				<View
					android:layout_width="fill_parent"
					android:layout_height="1px"
					android:background="@android:color/white" />
			</LinearLayout>
			<TextView
				android:id="@+id/code_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:background="@drawable/login_button_bg"
				android:gravity="center"
				android:paddingBottom="5dp"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
				android:paddingTop="5dp"
				android:text="@string/code_button"
				android:textColor="#c86c57"
				android:textSize="17sp" />
		</LinearLayout>
		<TextView
			android:id="@+id/next_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="30dp"
			android:background="@drawable/login_button_bg"
			android:gravity="center"
			android:padding="10dp"
			android:text="@string/login"
			android:textColor="#c86c57"
			android:textSize="17sp" />
	</LinearLayout>
</ScrollView>